@@ -40,7 +40,6 @@ speech_filters 			-> incluido en binario
 
 
 -Otros componentes mas extraños, como "descubrir" puntuaciones actuales en un juego u otros parámetros
--buscador de vidas automatico
 
 
 ---Fin cosas para version 5.1
